# bitcoinstats

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  LICENSE  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bitcoinstats.sln  bitcoinstats.vcxproj  bitcoinstats.vcxproj.filters  cmake_install.cmake
app/: main.cpp
include/: CBlockIndex.h  Commands.h  GetArgs.h  InParser.h  InputLine.h  KeyValueDatabase.h  ParseBlock.h  StandardDeviation.h  TradingSimulator.h  WakeupThread.h  blocks.h  rand.h  stonks.h  sutil.h  varint.h  wplatform.h
include/leveldb/: env.h  iterator.h
src/: Commands.cpp  InParser.cpp  InputLine.cpp  KeyValueDatabase.cpp  ParseBlock.cpp  TradingSimulator.cpp  WakupThread.cpp  blocks.cpp  stonks.cpp  sutil.cpp  wplatform.cpp
src/leveldb/port/: port.h  port_stdcxx.h
src/leveldb/util/: env_windows.cc
src/snappy/: config.h  snappy-sinksource.cc
